# MyTgBot

./: README.md  TgBot2000.cpp
TelegramBot/: CMakeLists.txt
TelegramBot/include/: telegram_api.hpp
TelegramBot/src/: bot.cpp  telegram_api.cpp
